[project]
name = "comfyui_hallo"
description = "Unofficial implementation of [a/hallo](https://github.com/fudan-generative-vision/hallo) for ComfyUI"
version = "1.0.0"
license = "LICENSE"
dependencies = ["diffusers", "omegaconf", "librosa", "audio-separator", "onnxruntime-gpu", "opencv-python", "onnx2torch", "onnx", "moviepy", "accelerate", "av", "bitsandbytes", "decord", "einops", "insightface", "mediapipe[vision]==0.10.14", "mlflow", "tqdm", "isort", "pylint", "pre-commit", "accelerate", "xformers", "torch", "numpy", "opencv-python"]

[project.urls]
Repository = "https://github.com/hay86/ComfyUI_Hallo"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_Hallo"
Icon = ""
